2001-03-20  Martin Baulig  <baulig@suse.de>

	* test-libgnome.c: Simple test program.

	* gnomelib-init2.[ch]: Removed, this is now gnome-program.[ch].

	* gnome-program.[ch]: New files. This implements a `GnomeProgram'
	GObject; most of the code is copied from gnomelib-init2.c.

2001-02-28  Mikael Hallendal  <micke@codefactory.se>

	* libgnome/: Fixed includes (added glib.h and gnome-defs.h
	to the files needing it. Those are: gnome-config.h, gnome-ditem.h,
	gnome-exec.h, gnome-fileconvert.h, gnome-i18n.h, gnome-regex.h,
	gnome-remote.h, gnome-score.h, gnome-sound.h, gnome-triggers.h,
	gnome-url.h, gnome-util.h, gnome-init.h).
	
2001-02-23  Martin Baulig  <baulig@suse.de>

	* libgnome-2.0.pc.in: New file.
	* Makefile.am: Install pkg-config file.

2001-02-15  Darin Adler  <darin@eazel.com>

	* gnomelib-init2.c: (gnome_program_preinita):
	Mark "Help options" with a N_ so it can be translated.

2000-12-26  Miguel de Icaza  <miguel@helixcode.com>

	* gnome-moz-remote.c (main): Give preference to mozilla when
	autodetecting.

2000-12-09  Martin Baulig  <baulig@suse.de>

	* gnome-dump.c, gnome-gen-mimedb.c, gnome-magic.c, gnome-magic.h,
	gnome-metadata.c, gnome-metadata.h, gnome-mime-info.c,
	gnome-mime-info.h, gnome-mime.c, gnome-mime.h: Removed.

2000-12-09  Martin Baulig  <baulig@suse.de>

	* gnomelibs-init.c (libgnome_loadinit): New static function; add
	this as `loadinit' function to libgnome's GnomeModuleInfo and
	call g_thread_init() here.

2000-12-09  Martin Baulig  <baulig@suse.de>

	* gnome-i18n.c: Comment out g_i18n_get_language_list() and
	g_i18n_guess_category_value() until someone with a clue has
	had a look at it.

2000-11-22  Martin Baulig  <martin@home-of-linux.org>

	* gnome-util.h (g_file_test): Removed.

	* Makefile.am: Use $(GNOMESUPPORT_INCS) and $(GNOMESUPPORT_LIBS).

2000-09-28  Martin Baulig  <baulig@suse.de>

	* gnome-history.[ch]: Moved to libcompat.

Thu Sep 28 03:34:52 2000  George Lebl <jirka@5z.com>
