@@ -25,25 +25,13 @@
 #define GNOMELIB_INIT_H 1
 
 #include <glib.h>
-#include <libgnome/gnome-defs.h>
+#include "gnome-defs.h"
+#include "gnome-program.h"
 
 BEGIN_GNOME_DECLS
 
 extern GnomeModuleInfo libgnome_module_info;
-#define LIBGNOME_INIT GNOME_PARAM_MODULE,&libgnome_module_info
-
-extern const char libgnome_param_create_directories[], libgnome_param_espeaker[], libgnome_param_enable_sound[],
-  libgnome_param_file_locator[], libgnome_param_app_prefix[], libgnome_param_app_sysconfdir[], libgnome_param_app_datadir[],
-  libgnome_param_app_libdir[], libgnome_param_human_readable_name[];
-#define LIBGNOME_PARAM_CREATE_DIRECTORIES libgnome_param_create_directories
-#define LIBGNOME_PARAM_ESPEAKER libgnome_param_espeaker
-#define LIBGNOME_PARAM_ENABLE_SOUND libgnome_param_enable_sound
-#define LIBGNOME_PARAM_FILE_LOCATOR libgnome_param_file_locator
-#define LIBGNOME_PARAM_APP_PREFIX libgnome_param_app_prefix
-#define LIBGNOME_PARAM_APP_SYSCONFDIR libgnome_param_app_sysconfdir
-#define LIBGNOME_PARAM_APP_DATADIR libgnome_param_app_datadir
-#define LIBGNOME_PARAM_APP_LIBDIR libgnome_param_app_libdir
-#define LIBGNOME_PARAM_HUMAN_READABLE_NAME libgnome_param_human_readable_name 
+#define LIBGNOME_INIT GNOME_PARAM_MODULE_INFO,&libgnome_module_info
 
 typedef char * (*GnomeFileLocatorFunc)(const char *domain, const char *filename, gboolean only_if_exists);
 
@@ -53,11 +41,8 @@ extern char *gnome_user_private_dir;
 extern char *gnome_user_accels_dir;
 
 /* Backwards compat */
-#define gnome_app_id gnome_program_get_name(gnome_program_get())
-#define gnome_app_version gnome_program_get_version(gnome_program_get())
-
-const char* gnome_program_get_human_readable_name(const GnomeProgram *app);
-
+#define gnome_app_id gnome_program_get_name (gnome_program_get())
+#define gnome_app_version gnome_program_get_version (gnome_program_get())
 
 END_GNOME_DECLS
 
